app/src/main/java/com/example/movietheatre/core/domain/util/error/EmailError.kt
package com.example.movietheatre.core.domain.util.error

enum class EmailError:RootError {
    INVALID_EMAIL,
    BLANK_FIELD
}